# feishu-recruit-bot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  recruit_state.json  talent-db-config.json
skills/recruit-ops/: CLI_REFERENCE.md  README.md  SKILL.md  TEST_ALL_REFERENCE.md  pyproject.toml  requirements.txt
skills/recruit-ops/deploy/: README.md  install.sh  uninstall.sh
skills/recruit-ops/deploy/systemd/: recruit-cron-runner.service  recruit-cron-runner.timer
skills/recruit-ops/docs/: AGENT_RULES.md  CLI_REFERENCE.md  COMPLEX_NEGOTIATION_REGRESSION.md  INCIDENT_RULES.md  INDEX.md  OPERATIONS.md  PROJECT_OVERVIEW.md
skills/recruit-ops/docs/archive/: AGENT_RULES_v3.4-verbose.md  COMPLEX_NEGOTIATION_REGRESSION.md  recruit-ops-SKILL_v3.5-pre-step1.md
skills/recruit-ops/docs/user-guides/: BOSS_GUIDE.md
skills/recruit-ops/exam_files/: followup_prompt.json  rubric.json  实习生笔试题目.docx
skills/recruit-ops/scripts/: bg_helpers.py  cmd_exam_result.py  cmd_import_candidate.py  cmd_ingest_cv.py  cmd_interview_reminder.py  cmd_new_candidate.py  cmd_remove.py  cmd_reschedule_request.py  cmd_round1_confirm.py  cmd_round1_defer.py  cmd_round1_reschedule.py  cmd_round1_result.py  cmd_round1_schedule.py  cmd_round2_confirm.py  cmd_round2_defer.py  cmd_round2_reschedule.py  cmd_round2_result.py  cmd_search.py  cmd_status.py  config.py  core_state.py  cron_health.py  cron_runner.py  daily_exam_review.py  exam_prereview.py  feishu.py  feishu_calendar.py  feishu_notify.py  recruit_paths.py  side_effect_guard.py  talent_db.py  test_all.py  trigger_cron_now.py
skills/recruit-ops/scripts/auto_reject/: __init__.py  cmd_scan_exam_timeout.py  executor.py
skills/recruit-ops/scripts/common/: __init__.py  cmd_debug_candidate.py  cmd_finalize_interview_time.py  cmd_interview_reminder.py  cmd_remove.py  cmd_reschedule_request.py  cmd_search.py  cmd_status.py  cmd_today_interviews.py  cmd_wait_return_resume.py  cmd_weekday.py
skills/recruit-ops/scripts/cron/: __init__.py  cmd_review_reminder.py  cron_runner.py
skills/recruit-ops/scripts/email_templates/: __init__.py  auto_attachments.py  constants.py  renderer.py
skills/recruit-ops/scripts/exam/: __init__.py  cmd_exam_ai_review.py  cmd_exam_result.py  cmd_send_submission_to_feishu.py  daily_exam_review.py  email_scanner.py  exam_prereview.py  fetch_exam_submission.py  llm_analyzer.py
skills/recruit-ops/scripts/feishu/: __init__.py  cmd_calendar_create.py  cmd_calendar_delete.py  cmd_notify.py  cmd_send_file.py
skills/recruit-ops/scripts/inbox/: __init__.py  analyzer.py  cmd_analyze.py  cmd_review.py  cmd_scan.py
skills/recruit-ops/scripts/intake/: __init__.py  cmd_attach_cv.py  cmd_import_candidate.py  cmd_ingest_cv.py  cmd_new_candidate.py  cmd_parse_cv.py  cmd_route_interviewer.py  cmd_send_cv.py
skills/recruit-ops/scripts/interview/: __init__.py  cmd_confirm.py  cmd_defer.py  cmd_reschedule.py  cmd_result.py
skills/recruit-ops/scripts/lib/: __init__.py  bg_helpers.py  candidate_aliases.py  candidate_storage.py  cli_subprocess.py  cli_wrapper.py  config.py  core_state.py  cv_parser.py  dashscope_client.py  db_migrations.py  email_attachments.py  email_watch.py  exam_grader.py  exam_imap.py  feishu_calendar.py  feishu_client.py  feishu_notify.py  file_lock.py  file_policy.py  http_retry.py  private_logs.py  recruit_paths.py  recruit_script_paths.py  run_chain.py  self_verify.py  side_effect_guard.py  smtp_sender.py  (+1 more)
(+145 files in other folders)
